# python-libraries

./: .gitignore  AGENTS.md  Makefile  README.md  conftest.py  install.py  mkdocs.yml  publish.py  pyproject.toml  run-tests-docker  script.sh
.github/workflows/: build.yaml  testing.yml
app-frame/: README.md  pyproject.toml
app-frame/docs/: index.md
app-frame/macrostrat/app_frame/: __init__.py  compose.py  control_command.py  core.py  follow_logs.py  test_app_frame.py
app-frame/macrostrat/app_frame/compose/: __init__.py
app-frame/macrostrat/app_frame/subsystems/: __init__.py  defs.py
app-frame/macrostrat/app_frame/utils/: __init__.py
app-frame/test_app/: __init__.py
auth-system/: CHANGELOG.md  README.md  pyproject.toml
auth-system/docs/: Version 1.md
auth-system/macrostrat/auth_system/core/: __init__.py  database.py  schema.py
auth-system/macrostrat/auth_system/legacy/: api.py  backend.py  identity.py  test_auth.py
auth-system/macrostrat/auth_system/orcid/: __init__.py  db.py  main.py
auth-system/macrostrat/auth_system/v1/: api.py  backend.py  context.py  create_user.py  test_auth.py
birdbrain/: pyproject.toml
birdbrain/birdbrain/: __init__.py  migration.py  util.py
birdbrain/birdbrain/mapper/: __init__.py  base.py
birdbrain/sparrow/birdbrain/: __init__.py  util.py
birdbrain/sparrow/birdbrain/mapper/: __init__.py
core-utils/: pyproject.toml
database/: CHANGELOG.md  pyproject.toml  requirements.txt  test_database.py
database/macrostrat/database/: __init__.py  compat.py  core.py  postgresql.py  query.py  sequences.py  test_database.py  utils.py
database/macrostrat/database/mapper/: __init__.py
database/macrostrat/database/transfer/: dump_database.py  restore_database.py  stream_utils.py  utils.py
database/test-fixtures/: test-schema.sql
database/test-scripts/: test-long-running-query
database/tests/: test_database.py  test_database_fixtures.py  test_engine_reuse.py  test_on_error.py  test_sequences.py  test_table_access.py  test_temp_database.py
database/tests/fixtures/schema-dir/: 01-basic-fixtures.sql  02-additional-fixtures.sql
database/tests/scripts/: test-long-running-query
dinosaur/: CHANGELOG.md  pyproject.toml  requirements.txt
dinosaur/macrostrat/dinosaur/: __init__.py  cluster.py
dinosaur/macrostrat/dinosaur/upgrade_cluster/: __init__.py  describe.py  utils.py
dinosaur/sparrow/dinosaur/: __init__.py
dinosaur/tests/: test_upgrade_cluster.py
dinosaur/tests/fixtures/: test-cluster-1.sql
docs/: index.md
docs/macrostrat/: app-frame.md  database.md
macrostrat/python_libraries/: __init__.py
package-tools/: README.md  pyproject.toml
package-tools/macrostrat/package_tools/: dependencies.py  install.py  publish.py
security/: CHANGELOG.md
security/macrostrat/security/v1/: create_user.py
subsystem-manager/: pyproject.toml
utils/: pyproject.toml  requirements.txt
utils/macrostrat/utils/: __init__.py  exc.py  logs.py  timer.py
utils/sparrow/utils/: shell.py
