[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Macrostrat Python libraries"
name = "macrostrat.python_libraries"
version = "1.4.0"
packages = [
  {include = "macrostrat"},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
"macrostrat.app_frame" = {path = "./app-frame", develop = true}
"macrostrat.database" = {path = "./database", develop = true}
"macrostrat.dinosaur" = {path = "./dinosaur", develop = true}
"macrostrat.package_tools" = {path = "./package-tools", develop = true}
"macrostrat.utils" = {path = "./utils", develop = true}
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
requests = "^2.27.1"
rich = "^13"
toml = "^0.10.2"
isort = "^5.13.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-monorepo-plugin = "^1.0.5"
mkdocstrings = "^0.24.0"

[tool.pytest.ini_options]
addopts = "--confcutdir=."

[tool.isort]
profile = "black"
known_first_party = "macrostrat"