[project]
name = "macrostrat.python_libraries"
version = "1.4.0"
description = "Macrostrat Python libraries"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10,<4"
dependencies = [
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "black>=22.10.0,<27",
    "macrostrat.app_frame",
    "macrostrat.database",
    "macrostrat.dinosaur",
    "macrostrat.package_tools",
    "macrostrat.utils",
    "macrostrat.auth_system",
    "pytest>=7.2.2,<8",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.27.1,<3",
    "rich>=13,<16",
    "toml>=0.10.2,<0.11",
    "isort>=5.13.2,<6",
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.3,<10",
    "mkdocs-monorepo-plugin>=1.0.5,<2",
    "mkdocstrings[python]>=0.24.1,<0.25",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.sources]
"macrostrat.app_frame" = { path = "./app-frame", editable = true }
"macrostrat.database" = { path = "./database", editable = true }
"macrostrat.dinosaur" = { path = "./dinosaur", editable = true }
"macrostrat.package_tools" = { path = "./package-tools", editable = true }
"macrostrat.utils" = { path = "./utils", editable = true }
"macrostrat.auth_system" = { path = "./auth-system", editable = true }


[tool.pytest.ini_options]
addopts = "--confcutdir=."

[tool.isort]
profile = "black"
known_first_party = "macrostrat"
