[project]
name = "macrostrat.app_frame"
version = "3.1.0"
description = "A control script framework for containerized applications."
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "macrostrat.utils>=1.3.0,<2",
    "python-dotenv>=1.0.0,<2",
    "toposort>=1.5,<2",
    "rich>=13,<16",
    "typer>=0.12.5,<0.27",
    "packaging>=24.1,<25",
]

[project.scripts]
test-app = "test_app:main"

[tool.uv]

[tool.uv.build-backend]
module-name = [
    "macrostrat",
    "test_app",
]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.21,<0.12.0"]
build-backend = "uv_build"
