[tool.poetry]
name = "macrostrat.auth_system"
version = "0.1.0"
description = "Authentication system for Macrostrat and related apps"
authors = ["Daven Quinn <code@davenquinn.com>"]
readme = "README.md"
packages = [{include = "macrostrat"}]

[tool.poetry.dependencies]
python = "^3.9"
"macrostrat.database" = "^3.3.1"
"macrostrat.utils" = "^1.2.0"
PyJWT = "^1.7.1"
werkzeug = "^2.3.7"
starlette = "^0.31.1"
webargs-starlette = "^2.0.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
