[tool.poetry]
name = "macrostrat.auth_system"
version = "0.1.0"
description = "Authentication system for Macrostrat and related apps"
authors = ["Daven Quinn <code@davenquinn.com>"]
readme = "README.md"
packages = [{ include = "macrostrat" }]

[tool.poetry.dependencies]
python = "^3.9"
"macrostrat.database" = "^3.3.1"
"macrostrat.utils" = "^1.2.0"
PyJWT = "^1.7.1"
werkzeug = "^2.3.7"
starlette = "^0.31.1"
webargs-starlette = "^2.0.0"
httpx = "^0.27.2"


sqlalchemy = { extras = ["asyncio"], version = "^2.0.22" }
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
fastapi = "^0.104.0"
httpx = "^0.25.0"
asyncpg = "^0.28.0"
pyjwt = "^2.8.0"
aiohttp = "^3.8.6"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.1.1"
minio = "^7.2.3"
numpy = "^1.26.4"
python-multipart = "^0.0.9"
python-slugify = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


