[project]
name = "macrostrat.auth_system"
version = "1.1.0"
description = "Authentication system for Macrostrat and related apps"
authors = [{ name = "Daven Quinn", email = "code@davenquinn.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "macrostrat.database>=3.3.1,<5.0.0",
    "macrostrat.utils>=1.2.0,<2",
    "PyJWT>=1.7.1,<3.0",
    "werkzeug>=2.3.7,<4.0",
    "webargs-starlette>=2.0.0,<3",
    "fastapi>=0.104.0,<0.137.0",
    "starlette>=1.0.0,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "bcrypt>=4.1.1,<6",
    "httpx2>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2,<10",
    "pytest-asyncio>=0.21.1,<0.22",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["macrostrat"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.21,<0.12.0"]
build-backend = "uv_build"


