[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "The database driver for Sparrow"
name = "birdbrain"
version = "0.1.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.26"
SQLAlchemy-Utils = "^0.37.0"
"macrostrat.core_utils" = {path = "/python-tools/core-utils"}
python = "^3.8"
sqlparse = "^0.4.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
