[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "The database driver for Sparrow"
name = "birdbrain"
version = "0.1.0"

[tool.poetry.dependencies]
GeoAlchemy2 = "^0.9.4"
SQLAlchemy = "^1.4.26"
SQLAlchemy-Utils = "^0.37.0"
"macrostrat.core_utils" = ""
python = "^3.8"
sqlparse = "^0.4.0"
schemainspect = "^3.0.1616029793"
migra = "^3.0.1621480950"

[tool.poetry.dev-dependencies]
"macrostrat.core_utils" = {path = "../core-utils", develop = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
