[project]
name = "macrostrat.database"
version = "4.2.0"
description = "A SQLAlchemy-based database toolkit."
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "GeoAlchemy2>=0.15.2,<0.21.0",
    "SQLAlchemy>=2.0.18,<3",
    "SQLAlchemy-Utils>=0.41.1,<0.43",
    "click>=8.1.3,<9",
    "macrostrat.utils>=1.3.3,<2",
    "sqlparse>=0.5.1,<0.6",
    "aiofiles>=23.2.1,<26",
    "rich>=13.7.1,<16",
    "psycopg>=3.2.1,<4",
    "psycopg2>=2.9.11,<3",
]

[dependency-groups]
dev = ["macrostrat.utils"]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
"macrostrat.utils" = { path = "../utils", editable = true }

[tool.uv.build-backend]
module-name = ["macrostrat"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.21,<0.12.0"]
build-backend = "uv_build"
