[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Diff-based database migrations"
name = "macrostrat.dinosaur"
packages = [{ include = "macrostrat" }]
version = "3.2.0"

[tool.poetry.dependencies]
SQLAlchemy = "^2.0.0"
docker = "^7.0.0"
"macrostrat.database" = "^4.0.0"
"macrostrat.utils" = "^1.3.0"
migra = "^3.0.1621480950"
python = "^3.10"
schemainspect = "^3.0.1616029793"
# Add an explicit dependency on setuptools for Python 3.12 compatibility
setuptools = "^78.1.0"


[tool.poetry.dev-dependencies]
"macrostrat.database" = { path = "../database", develop = true }
"macrostrat.utils" = { path = "../utils", develop = true }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
