[project]
name = "macrostrat.dinosaur"
version = "4.1.0"
description = "Diff-based database migrations"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "SQLAlchemy>=2.0.0,<3",
    "docker>=7.0.0,<8",
    "macrostrat.database>=4.0.1,<5.0.0",
    "macrostrat.utils>=1.3.3,<2",
    "setuptools>=78.1.0,<83",
    "testcontainers>=4.14.2",
    "results>=1.4.0,<1.5.0",
]

[dependency-groups]
dev = [
    "macrostrat.database",
    "macrostrat.utils",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
"macrostrat.database" = { path = "../database", editable = true }
"macrostrat.utils" = { path = "../utils", editable = true }

[tool.uv.build-backend]
module-name = ["macrostrat"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.21,<0.12.0"]
build-backend = "uv_build"
