[project]
name = "macrostrat.package_tools"
version = "2.0.0"
description = "Tools for managing Python packages in a monorepo"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.30.0,<3",
    "rich>=13.3.5,<14",
    "toml>=0.10.2,<0.11",
    "typer>=0.12.0,<0.13",
    "macrostrat.utils>=1.0.0,<2",
]

[project.scripts]
mono = "macrostrat.package_tools:mono"

[dependency-groups]
dev = ["macrostrat.utils"]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
"macrostrat.utils" = { path = "../utils", editable = true }

[tool.uv.build-backend]
module-name = ["macrostrat"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
