[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "A control script framework for containerized applications."
name = "macrostrat.subsystem_manager"
packages = [
  {include = "macrostrat"},
]
version = "1.0.0"

[tool.poetry.dependencies]
"macrostrat.utils" = "^1.1.0"
python = "^3.10"
python-dotenv = "^1.0.0"
toposort = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
