[tool.poetry]
authors = ["Daven Quinn <dev@davenquinn.com>"]
description = "Core utilities for Sparrow"
name = "sparrow.utils"
packages = [
  {include = "sparrow"}, # only use from="src" if that is how you've structured your code.
]
version = "0.1.0"

[tool.poetry.dependencies]
colorlog = "^6.5.0"
python = "^3.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
