[project]
name = "macrostrat.utils"
version = "1.3.1"
description = "Core utilities for Macrostrat and Sparrow"
authors = [{ name = "Daven Quinn", email = "dev@davenquinn.com" }]
requires-python = ">=3.8,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "colorlog>=6.5.0,<7",
    "pydantic>=1.10.4,<2,<3.0.0",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["macrostrat"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
